# kafka-RasPi-flask

./: .gitignore  ConsumerFrontend.py  ConsumerFrontendDash.py  IPWebCam2FrontEnd.py  IPWebCam2KafkaConsumer.py  IPWebCam2KafkaProducer.py  README.md  plotly_example.py  pyproject.toml
templates/: index.html
