[tool.poetry]
name = "kafka-RasPi-Flask"
version = "0.1.0"
description = ""
authors = ["Jonathan Chow <jonathan@cychow.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.1"
opencv-python = "^4.2.0"
kafka-python = "^2.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
